# inspection-report-analyzer

./: .gitignore  Challenge_Tasks.md  Complete_Inspection_RAG_System.ipynb  env_template.txt  launch_html.py  main.py  pyproject.toml  start_complete_html_app.py
app/: start_backend.py  start_frontend.py
app/backend/: __init__.py  agent.py  main.py  models.py  utils.py
app/frontend/: index.html  server.py  streamlit_app.py
inspection_report_analyzer/: __init__.py
